meta tags update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DEAN</title>
+  <meta name="description"
+    content="Dean Projekt Gradnja is a reputable construction company specializing in residential and commercial projects. With years of experience and a commitment to quality, we provide comprehensive construction services to meet your needs. Explore our portfolio and contact us today for a consultation.">
+  <meta name="keywords"
+    content="Dean Projekt Gradnja, construction company, residential construction, commercial construction, construction services">
+  <meta name="author" content="Dean Projekt Gradnja">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>DEAN Projekt gradnja</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VP1SFB338V"></script>
